<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_slect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_choose_a_csv_file"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/ed_excelpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/activity_main_file_storage_address"
        app:layout_constraintTop_toBottomOf="@+id/btn_slect"
        tools:layout_editor_absoluteX="190dp" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/activity_main_20"
        app:layout_constraintTop_toBottomOf="@+id/ed_excelpo"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_data_export"
        app:layout_constraintTop_toBottomOf="@+id/btn_setout"
        tools:layout_editor_absoluteX="-39dp" />

    <Button
        android:id="@+id/btn_setout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_21"
        app:layout_constraintTop_toBottomOf="@+id/ed_out"
        tools:layout_editor_absoluteX="159dp" />

    <EditText
        android:id="@+id/ed_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/activity_main_data_export_directory"
        app:layout_constraintTop_toBottomOf="@+id/btn_read"
        tools:layout_editor_absoluteX="99dp" />

    <TextView
        android:id="@+id/tx-guid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/activity_main_22"
        app:layout_constraintTop_toBottomOf="@+id/btn_out"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>